<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <EditText
        android:id="@+id/et_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/app_name" />

    <EditText
        android:id="@+id/et_app_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/app_desc" />

    <EditText
        android:id="@+id/et_app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/app_version" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_marginTop="3dp"
            android:layout_weight="0.7"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/tv_filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />
    </LinearLayout>
    <Button android:id="@+id/btn_create"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"/>

</LinearLayout>
